[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.15", features = ["derive"] }
linkify = "0.9.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
